# Computer-Science-Projects

./: .gitattributes  README.md  elf_common.c  elf_common.h  keys.txt  keys.txt.pub  multiserver.c  stats  stats.c  stats.h
A0/: README.md
A0/example/: Makefile  wave.c  wave.h
A1/: A1_Grade
A3/: A3_Grade.md
A4/: A4_Grade.md
A6/: A6_Grade.md
A7/: grade.md
Assignment_1/: feedback.md
Assignment_3/: ~WRL0936.tmp
Assignment_6/Assignment_6_Build_1/: Assignment_6_Build_1.ino
Assignment_6/Assignment_6_Build_2/: Assignment_6_Build_2.ino
CS6200/: Hexadecimal - Wikipedia.txt  Killing Eve - Wikipedia.html  README.txt  RunCrawler.py  RunCrawler.sh  Softball - Wikipedia.html  Softball - Wikipedia.webarchive  crawler.py  depth_checker.py  freqHexa.txt  freqKillingEve.txt  freqSoftball.txt  tracker.py
CS6200/Assignment1/: README.txt  URLsCrawled.txt  depth_checker.py  stats.txt  stripper.py  tracker.py
CS6200/Assignment2/: .gitattributes  .gitignore  CreateIndex.py  DocumentID.py  DocumentIDFile.json  InvertedIndex.json  InvertedIndex.py  README.txt  RunDataTransformer.py  Stats.py  TermID.py  TermIDFile.json  UseIndex.py  UseIndexResults.txt  output.txt  requirements.txt  stats.txt
CS6200/Assignment3/: .gitignore  Output.txt  Queries.txt  README.txt  (+16 more)
CS6410/: .~lock.HW 3.docx#  HW 2.docx  HW 3.docx
Embedded Software/: README.md  stats.h
FinalProject-A5/: Makefile  queryclient  queryclient.c  queryserver  queryserver.c
a1_07/: README.md
madubata_iot-master/: README.md
project2_threading/: CMakeLists.txt  GlobalVariables.h  questions  thread.cpp
(+1439 files in other folders)
